[tool.poetry]
name = "telegram-guess-the-number-bot"
version = "0.1.0"
description = ""
authors = ["mbedniy777  <mbedniy777@gmail.com >"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.5.1"
python-environ = "^0.4.54"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
